# open5gs

./: .gitignore  debug  flake.nix
configs/freeDiameter/: smf.conf.in
lib/diameter/: CMakeLists.txt  meson.build  nextranet-aaa.c
lib/diameter/include/: ogs-diameter-nextranet-aaa.h
lib/diameter/nextranet_aaa/: dict.c  meson.build  message.c  message.h  ogs-diameter-nextranet-aaa.h
lib/freeDiameter/: nextranet_aaa_dict.fdx
lib/freeDiameter/nextranet_aaa/: nextranet_aaa_dict.fdx
src/smf/: context.c  context.h  event.c  event.h  fd-path.c  fd-path.h  gsm-sm.c  meson.build  nextranet-aaa-path.c  nextranet-aaa-path.h  nsmf-handler.c
test/: smf-test.yaml
